<resources>
    <string name="about0_" formatted="false">Watch your call, message and data plans!</string>
    <string name="about0" formatted="false">CallMeter generates reports from call, message and data logs. It supports several modes of billing.</string>
    <string name="about1" formatted="false">The output format is usage | time or count used this billing period | time or count overall.</string>
    <string name="about2" formatted="false">The billing mode specifies the length of the first / next billing intervals. E.g. 60/10 means every call is billed for minimum 60s, any longer call is rounded up to next full 10s.</string>
    <string name="about3" formatted="false">CallMeter runs in background every 30min (only if not in standby). This means, that deleting calls or messages older than 30min will not change your stats. Deleting calls or messages younger than 30min may result in wrong statistics.</string>
    <string name="author_and_many_more" formatted="false">and many more...</string>
    <string name="add_" formatted="false">Add</string>
    <string name="add_log" formatted="false">Add log entry</string>
    <string name="length_hint_call" formatted="false">Length in seconds</string>
    <string name="length_hint_data" formatted="false">Length in kB</string>
    <string name="settings" formatted="false">Preferences</string>
    <string name="update_interval_" formatted="false">Update interval</string>
    <string name="update_interval_hint" formatted="false">Shorter period will use more battery.</string>
    <string name="update_interval_data_" formatted="false">Update interval (data)</string>
    <string name="update_interval_data_hint" formatted="false">Update data stats needs to be done more often. Esp. Samsung needs very short intervals.</string>
    <string name="date_begin_" formatted="false">Beginning of records</string>
    <string name="date_begin_hint" formatted="false">Ignore any logs before this date.</string>
    <string name="delete_old_logs_" formatted="false">Delete logs older than</string>
    <string name="delete_old_logs_help" formatted="false">Delete logs older than x days from internal database. Leave empty to disable.</string>
    <string name="common_prefs_" formatted="false">Common preferences</string>
    <string name="edit_" formatted="false">Edit</string>
    <string name="delete_" formatted="false">Delete</string>
    <string name="up_" formatted="false">Move up</string>
    <string name="down_" formatted="false">Move down</string>
    <string name="about_" formatted="false">About</string>
    <string name="about_hint" formatted="false">About this app</string>
    <string name="faq_hint" formatted="false">Some tips and tricks, how to set up this app.</string>
    <string name="feedback_" formatted="false">Feedback</string>
    <string name="feedback_hint" formatted="false">Report bugs, request features ...</string>
    <string name="google_plus_hint" formatted="false">Follow me on Google+.\nGet update notifications etc.</string>
    <string name="more_" formatted="false">More Apps..</string>
    <string name="billing_" formatted="false">Billing</string>
    <string name="billday_" formatted="false">First day of your bill</string>
    <string name="billday_last" formatted="false">Last day of your bill</string>
    <string name="billmode_" formatted="false">Mode of billing</string>
    <string name="billdate_" formatted="false">Start of billing period:</string>
    <string name="appearance_" formatted="false">Appearance</string>
    <string name="behavior_" formatted="false">Behavior</string>
    <string name="appearance_and_behavior_" formatted="false">Appearance &amp; behavior</string>
    <string name="widget_stats_title" formatted="false">Usage Utility (stats)</string>
    <string name="widget_logs_title" formatted="false">Usage Utility (last log)</string>
    <string name="widget_" formatted="false">Widget</string>
    <string name="widgets_" formatted="false">Widgets</string>
    <string name="widgets_no_widgets_" formatted="false">No widgets added</string>
    <string name="widgets_no_widgets_hint" formatted="false">There are no widgets added to the launcher.</string>
    <string name="delete_widget" formatted="false">Delete widget</string>
    <string name="simple_preferences_" formatted="false">Simple preferences</string>
    <string name="simple_preferences_hint" formatted="false">Very simple preferences, suitable for most users. Only available with default rule set.</string>
    <string name="simple_preferences_deactivated" formatted="false">Simple preferences are available for default rule set only. Import the default rule set to reactivate.</string>
    <string name="advanced_preferences_" formatted="false">Advanced preferences</string>
    <string name="advanced_preferences_hint" formatted="false">This allows you to set a way more complex setup. Most Users won\'t need it.</string>
    <string name="theme_" formatted="false">Theme</string>
    <string name="textsize_" formatted="false">Text size</string>
    <string name="textsize_hint" formatted="false">Text size in pixels; leave empty for default</string>
    <string name="textsize_title_" formatted="false">Title\'s text size</string>
    <string name="textsize_title_hint" formatted="false">Text size for titles in pixels; leave empty for default</string>
    <string name="textsize_bigtitle_" formatted="false">Big title\'s text size</string>
    <string name="textsize_bigtitle_hint" formatted="false">Text size for big titles in pixels; leave empty for default</string>
    <string name="textsize_spacer_" formatted="false">Spacer\'s size</string>
    <string name="textsize_spacer_hint" formatted="false">Size for spacers in pixels; leave empty for default</string>
    <string name="textsize_pbar_" formatted="false">Progress bar\'s size</string>
    <string name="textsize_pbar_hint" formatted="false">Size for progress bars in pixels; leave empty for default</string>
    <string name="textsize_pbarbp_" formatted="false">Bill period\'s progress bar\'s size</string>
    <string name="textsize_pbarbp_hint" formatted="false">Size for bill period\'s progress bars in pixels; leave empty for default</string>
    <string name="show_today_" formatted="false">Show today</string>
    <string name="show_today_hint" formatted="false">Show today stats</string>
    <string name="show_total_" formatted="false">Show total</string>
    <string name="show_total_hint" formatted="false">Show total stats, disable to see current only.</string>
    <string name="show_hours_" formatted="false">Show hours</string>
    <string name="show_hours_hint" formatted="false">Show time in seconds, minutes, hours and days.\nIf unchecked only seconds and minutes are shown.</string>
    <string name="show_help_" formatted="false">Show help</string>
    <string name="show_help_hint" formatted="false">Show help in Plans/Rules setup view.</string>
    <string name="show_shortname_" formatted="false">Show short name instead of long name</string>
    <string name="show_cost_" formatted="false">Show cost</string>
    <string name="show_billperiod_" formatted="false">Show progress of billing period</string>
    <string name="show_icon_" formatted="false">Show icon</string>
    <string name="hide_name_" formatted="false">Hide name of plan</string>
    <string name="small_widget_" formatted="false">Use small widget</string>
    <string name="show_target_billday_" formatted="false">Show last bill day</string>
    <string name="show_target_billday_hint" formatted="false">Show last day of bill instead of first.</string>
    <string name="show_calllength_" formatted="false">Show info after hanging up</string>
    <string name="show_calllength_hint" formatted="false">Show length/cost of a call after hanging up.</string>
    <string name="hide_zero_" formatted="false">Hide empty plans</string>
    <string name="hide_zero_hint" formatted="false">Hide plans containing no item.</string>
    <string name="hide_nocost_" formatted="false">Hide no cost plans</string>
    <string name="hide_nocost_hint" formatted="false">Hide plans with no cost.</string>
    <string name="hide_progressbars_" formatted="false">Hide progress bars</string>
    <string name="hide_progressbars_hint" formatted="false">Hide progress bars in main view.</string>
    <string name="custom_currency_symbol_" formatted="false">Custom currency symbol</string>
    <string name="custom_currency_symbol_hint" formatted="false">Set a custom currency symbol, leave empty for system default.</string>
    <string name="custom_currency_format_" formatted="false">Custom currency format</string>
    <string name="custom_currency_format_hint" formatted="false">Select a custom currency format.</string>
    <string name="custom_date_format_" formatted="false">Custom date format</string>
    <string name="custom_date_format_hint" formatted="false">Select a custom date format.</string>
    <string name="custom_delimiter_" formatted="false">Custom delimiter</string>
    <string name="custom_delimiter_hint" formatted="false">Set a custom delimiter separating the blocks of statistics.</string>
    <string name="split_sms_at_160_" formatted="false">Split text messages at 160 chars</string>
    <string name="split_sms_at_160_hint" formatted="false">Disable to use android\'s system method.</string>
    <string name="ask_for_plan_" formatted="false">Ask for plan</string>
    <string name="ask_for_plan_hint" formatted="false">Ask for plan for unmatched calls after hanging up.</string>
    <string name="autohide_" formatted="false">Auto hide</string>
    <string name="autohide_hint" formatted="false">Hide dialog after .. seconds. Leave empty to deactivate auto hide.</string>
    <string name="select_plan_" formatted="false">Select a plan</string>
    <string name="set_selected_as_default_" formatted="false">Set selected plan as default</string>
    <string name="autohide_in_" formatted="false">Auto hide dialog in: %ds</string>
    <string name="logs" formatted="false">Logs</string>
    <string name="now" formatted="false">Now</string>
    <string name="summary" formatted="false">Summary</string>
    <string name="detail" formatted="false">Details</string>
    <string name="show_logs" formatted="false">Show logs</string>
    <string name="plans" formatted="false">Plans</string>
    <string name="plans_hint" formatted="false">Set your plans for all kind of billing here.</string>
    <string name="plans_new" formatted="false">New plan</string>
    <string name="rule_" formatted="false">Rule</string>
    <string name="rules" formatted="false">Rules</string>
    <string name="rules_hint" formatted="false">Set your billing rules here.</string>
    <string name="rules_new" formatted="false">New Rule</string>
    <string name="length_" formatted="false">Length</string>
    <string name="blength_" formatted="false">Billed length</string>
    <string name="numbergroups_edit_" formatted="false">Number groups</string>
    <string name="numbergroups_edit_hint" formatted="false">Edit number groups here.</string>
    <string name="hourgroups_edit_" formatted="false">Hour groups</string>
    <string name="hourgroups_edit_hint" formatted="false">Edit hour groups here.</string>
    <string name="calls" formatted="false">Calls</string>
    <string name="calls_in" formatted="false">Calls In</string>
    <string name="calls_out_" formatted="false">CallsOut</string>
    <string name="sms" formatted="false">SMS</string>
    <string name="mms" formatted="false">MMS</string>
    <string name="data" formatted="false">Data</string>
    <string name="prepaid_" formatted="false">Prepaid plan</string>
    <string name="prepaid_hint" formatted="false">Bill on prepaid basis. Cost is substracted from balance as you call etc.</string>
    <string name="roamed_" formatted="false">Roamed</string>
    <string name="remote_hint" formatted="false">Remote number</string>
</resources>