<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/bar"
        style="@style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/plan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="plan"
                android:visibility="gone" />

            <ToggleButton
                android:id="@+id/in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textOff="@string/calls_in"
                android:textOn="@string/calls_in" />

            <ToggleButton
                android:id="@+id/out"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textOff="@string/calls_out_"
                android:textOn="@string/calls_out_" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/calls"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textOff="@string/calls"
                android:textOn="@string/calls" />

            <ToggleButton
                android:id="@+id/sms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textOff="@string/sms"
                android:textOn="@string/sms" />

            <ToggleButton
                android:id="@+id/mms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textOff="@string/mms"
                android:textOn="@string/mms" />

            <ToggleButton
                android:id="@+id/data"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textOff="@string/data"
                android:textOn="@string/data" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bar"
        android:background="?android:attr/colorBackground"
        android:cacheColorHint="?android:attr/colorBackground"
        android:choiceMode="singleChoice"
        android:drawSelectorOnTop="false"
        android:fastScrollEnabled="true"
        android:scrollingCache="true" />

</RelativeLayout>