<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/rules_type" />

        <Spinner
            android:id="@+id/direction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/direction_calls" />

        <EditText
            android:id="@+id/length"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/length_hint_call"
            android:inputType="number" />

        <EditText
            android:id="@+id/remote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/remote_hint" />

        <TextView
            android:id="@+id/date"
            style="?android:attr/spinnerStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/time"
            style="?android:attr/spinnerStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/roamed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/roamed_" />
    </LinearLayout>

</ScrollView>